[gd_scene load_steps=9 format=2]

[ext_resource path="res://png/moon_idle.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://png/shadow.png" type="Texture" id=3]
[ext_resource path="res://enemy_shader.tres" type="Material" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE,UV);
	COLOR.a *= 0.5;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 56.3357
height = 0.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 55.8385
height = 0.0

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
use_parent_material = true
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
show_behind_parent = true
material = SubResource( 4 )
position = Vector2( -61.8787, 94.4056 )
scale = Vector2( 1.96623, 1 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.136269, 74.1555 )
shape = SubResource( 5 )

[node name="HPBar" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HPBar"]
margin_left = -32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 37.0
rect_scale = Vector2( 1, 0.25 )
color = Color( 0.0705882, 0.694118, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTween" type="Tween" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.360764, 74.3455 )
shape = SubResource( 6 )

[node name="AnimationTween" type="Tween" parent="."]

[node name="PositionTween" type="Tween" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DamageTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
